# silicon

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  vcpkg.json
.github/workflows/: Linux.yml  Windows.yml  cmake.yml
docs/: CNAME  _button_8hpp_source.html  _engine_8hpp_source.html  _event_8hpp_source.html  _log_8hpp_source.html  _math_8hpp_source.html  _node2_d_8hpp_source.html  _node_8hpp_source.html  _sprite_8hpp_source.html  _stop_watch_8hpp_source.html  _string_8hpp_source.html  _texture_8hpp_source.html  _types_8hpp_source.html  _window_8hpp_source.html  annotated.html  annotated_dup.js  class_si_1_1_button-members.html  class_si_1_1_button.html  class_si_1_1_button__inherit__graph.map  class_si_1_1_button__inherit__graph.md5  class_si_1_1_node-members.html  class_si_1_1_node.html  class_si_1_1_node.js  class_si_1_1_node2_d-members.html  class_si_1_1_node2_d.html  class_si_1_1_node2_d__coll__graph.map  class_si_1_1_node2_d__coll__graph.md5  class_si_1_1_node2_d__inherit__graph.map  class_si_1_1_node2_d__inherit__graph.md5  class_si_1_1_node__inherit__graph.map  class_si_1_1_node__inherit__graph.md5  class_si_1_1_sprite-members.html  class_si_1_1_sprite.html  class_si_1_1_sprite__coll__graph.map  class_si_1_1_sprite__coll__graph.md5  class_si_1_1_stop_watch.html  class_si_1_1_string-members.html  class_si_1_1_string.html  class_si_1_1_string__coll__graph.md5  class_si_1_1_string__inherit__graph.map  (+99 more)
docs/html/: _allocator_8hpp.html  _allocator_8hpp.js  _allocator_8hpp__dep__incl.map  _allocator_8hpp__dep__incl.md5  _allocator_8hpp__incl.map  _allocator_8hpp__incl.md5  _allocator_8hpp_source.html  _engine_8cpp.html  _engine_8cpp.js  _engine_8cpp__incl.map  _engine_8cpp__incl.md5  _engine_8hpp.html  _engine_8hpp.js  _engine_8hpp__dep__incl.map  _engine_8hpp__dep__incl.md5  _engine_8hpp__incl.map  _engine_8hpp__incl.md5  _engine_8hpp_source.html  _log_8cpp.html  _log_8cpp.js  _log_8cpp__incl.map  _log_8cpp__incl.md5  _log_8hpp.html  _log_8hpp.js  _log_8hpp__dep__incl.map  _log_8hpp__dep__incl.md5  _log_8hpp__incl.map  _log_8hpp__incl.md5  _log_8hpp_source.html  _node_8cpp.html  _node_8cpp__incl.map  _node_8cpp__incl.md5  _node_8hpp.html  _node_8hpp.js  _node_8hpp__dep__incl.map  _node_8hpp__dep__incl.md5  _node_8hpp__incl.map  _node_8hpp__incl.md5  _node_8hpp_source.html  _r_e_a_d_m_e_8md.html  (+122 more)
docs/html/search/: all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  enums_1.js  enumvalues_4.js  files_0.js  files_2.js  files_5.js  functions_0.js  functions_2.js  functions_3.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_4.js  typedefs_5.js  typedefs_6.js  typedefs_7.js  variables_0.js  (+2 more)
docs/latex/: _allocator_8hpp.tex  _allocator_8hpp__dep__incl.md5  _allocator_8hpp__incl.md5  _allocator_8hpp_source.tex  _button_8hpp_source.tex  _engine_8cpp.tex  _engine_8cpp__incl.md5  _engine_8hpp.tex  _engine_8hpp__dep__incl.md5  _engine_8hpp__incl.md5  _engine_8hpp_source.tex  _event_8hpp_source.tex  _log_8cpp.tex  _log_8cpp__incl.md5  _log_8hpp.tex  _log_8hpp__dep__incl.md5  _log_8hpp__incl.md5  _log_8hpp_source.tex  _math_8hpp_source.tex  _node2_d_8hpp_source.tex  _node_8cpp.tex  _node_8cpp__incl.md5  _node_8hpp.tex  _node_8hpp__dep__incl.md5  _node_8hpp__incl.md5  _node_8hpp_source.tex  _sprite_8hpp_source.tex  _stop_watch_8cpp.tex  _stop_watch_8cpp__incl.md5  _stop_watch_8hpp.tex  _stop_watch_8hpp__dep__incl.md5  _stop_watch_8hpp__incl.md5  _stop_watch_8hpp_source.tex  _string_8cpp.tex  _string_8cpp__incl.md5  _string_8hpp.tex  _string_8hpp__dep__incl.md5  _string_8hpp__incl.md5  _string_8hpp_source.tex  _texture_8hpp_source.tex  (+62 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_11.js  classes_12.js  classes_13.js  classes_15.js  classes_16.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enumvalues_1.js  (+27 more)
include/Silicon/: Allocator.hpp  Config.hpp.in  Engine.hpp  Event.hpp  Log.hpp  Math.hpp  Node.hpp  StopWatch.hpp  String.hpp  Types.hpp  Window.hpp
include/Silicon/Node/: Node2D.hpp  Sprite.hpp  Texture.hpp
include/Silicon/Node/UI/: Button.hpp
sample/: CMakeLists.txt  Sample.cpp
src/: Engine.cpp  Event.cpp  Log.cpp  Node.cpp  StopWatch.cpp  String.cpp  Types.cpp  Window.cpp
src/Node/: Node2D.cpp  Sprite.cpp  Texture.cpp
src/Node/UI/: Button.cpp
test/EngineInit/: EngineInit.cmake  EngineInit.cpp
test/HelloWorld/: HelloWorld.cmake  HelloWorld.cpp
test/LoopOnce/: LoopOnce.cmake  LoopOnce.cpp
test/NodeTree/: NodeTree.cmake  NodeTree.cpp
utils/: Setup.sh  setup.py
utils/Linux/: InstallVulkan.sh  Setup.sh
utils/Linux/Ubuntu/: InstallVulkan.sh
utils/Windows/: Setup.bat
